--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "npm run test && istanbul-badges-readme && git add 'README.md' && lint-staged"
+      "pre-commit": "npm run test && istanbul-badges-readme && git add README.md && lint-staged"
     }
   },
   "config": {
